# AdvancedCPP

./: .gitignore  AdvCpp_ClassD.vsdx  Bemerkungen.txt  Todo.docx
DigitalLibrary/: CMakeLists.txt
DigitalLibrary/Client/: digitalLibraryClient.cpp  tcp_client.cpp  tcp_client.h
DigitalLibrary/Common/: InputFct.cpp  InputFct.h  User.cpp  User.h  book.cpp  book.h  protocol.cpp  protocol.h
DigitalLibrary/Common/Actions/: actionaddbook.cpp  actionaddbook.h  actionborrowbook.cpp  actionborrowbook.h  actioncreateuser.cpp  actioncreateuser.h  actiondatagramInterface.h  actiondeletebook.cpp  actiondeletebook.h  actiondeleteuser.cpp  actiondeleteuser.h  actionlogin.cpp  actionlogin.h  actionlogout.cpp  actionlogout.h  actionmodifybook.cpp  actionmodifybook.h  actionmodifyuser.cpp  actionmodifyuser.h  actions.h  actionsearchbook.cpp  actionsearchbook.h  actionshowbooks.cpp  actionshowbooks.h  actionshowborrowedbooks.cpp  actionshowborrowedbooks.h  actionshowusers.cpp  actionshowusers.h
DigitalLibrary/Server/: digitalLibraryServer.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
DigitalLibrary2/: CMakeLists.txt
DigitalLibrary2/Client/: digitalLibraryClient.cpp  tcp_client.cpp  tcp_client.h
DigitalLibrary2/Common/: InputFct.cpp  InputFct.h  book.cpp  book.h  protocol.cpp  user.cpp  user.h
DigitalLibrary2/Common/Actions/: actionaddbook.cpp  actionaddbook.h  actionborrowbook.cpp  actionborrowbook.h  actioncreateuser.cpp  actioncreateuser.h  actiondeletebook.h  actiondeleteuser.cpp  actiondeleteuser.h  actionlogin.cpp  actionmodifybook.cpp  actionmodifyuser.cpp  actionmodifyuser.h  actions.h  actionshowbooks.cpp  actionshowborrowedbooks.cpp  actionshowusers.cpp  actionshowusers.h
DigitalLibrary2/Server/: digitalLibraryServer.cpp  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp
